--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <!-- <link rel="icon" href="/favicon.ico"> -->
     <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="description" content="Find the event for you. Search upcoming events and discover amazing experiences.">
+    <title>EvenToNight</title>
   </head>
   <body>
     <div id="app"></div>
