--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find the event for you. Search upcoming events and discover amazing experiences.">
     <title>EvenToNight</title>
   </head>
   <body>
