--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EvenToNight</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
   </head>
   <body>
     <div id="app"></div>
